# technicalAssessmentEntropiaAI

./: Dockerfile  main.py  notebook.ipynb  pyproject.toml
data/: datos_clima_mexico.csv
src/: llm.py  retriever.py  router.py  stylist.py  workflow.py
